--- a/index.css
+++ b/index.css
@@ -1,59 +1,3 @@
-.header{
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
-    padding: 5px;
-}
-
-.logo{
-    height: 80px;
-    width:80px
-}
-
-.nav-items > ul{
-    display: flex;
-    list-style-type: none;
-}
-
-.nav-items> ul > li{
-    margin: 5px;
-    cursor: pointer;
-}
-
-.res-container{
-    display: flex;
-    flex-wrap: wrap;
-    margin:5px
-}
-
-.res-card{
-    height:380px;
-    width:280px;
-    padding:5px
-}
-
-.res-card:hover{
-    border:1px solid black;
-    cursor: pointer;
-}
-
-.res-logo{
-    height:190px;
-    width:270px;
-}
-
-.search-container{
-    margin: 5px 0px;
-}
-
-.shimmer-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.shimmer-card{
-    height:380px;
-    width:280px;
-    background-color: #0f0f0f0f;
-    margin: 5px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
